--- a/AppstoreSearch/Cells/AutoComplTableViewCell.xib
+++ b/AppstoreSearch/Cells/AutoComplTableViewCell.xib
@@ -9,7 +9,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="AutoComplTalbeViewCell" id="KGk-i7-Jjw" customClass="AutoComplTableViewCell" customModule="AppstoreSearch" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="AutoComplTableViewCell" id="KGk-i7-Jjw" customClass="AutoComplTableViewCell" customModule="AppstoreSearch" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -17,14 +17,14 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="CVs-cq-toc">
-                        <rect key="frame" x="20" y="2" width="40" height="40"/>
+                        <rect key="frame" x="20" y="9.5" width="25" height="25"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="40" id="O3w-5F-BPP"/>
-                            <constraint firstAttribute="width" constant="40" id="Pjy-ay-VwH"/>
+                            <constraint firstAttribute="height" constant="25" id="O3w-5F-BPP"/>
+                            <constraint firstAttribute="width" constant="25" id="Pjy-ay-VwH"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oLI-Cd-xc2">
-                        <rect key="frame" x="65" y="11.5" width="235" height="21"/>
+                        <rect key="frame" x="50" y="11.5" width="250" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -51,7 +51,6 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="imageView" destination="CVs-cq-toc" id="gQa-6t-A9I"/>
                 <outlet property="imgView" destination="CVs-cq-toc" id="M8k-rX-3fc"/>
                 <outlet property="titleLabel" destination="oLI-Cd-xc2" id="92I-A1-dM1"/>
                 <outlet property="underLineView" destination="uj5-be-87T" id="Pba-dH-e9w"/>
