--- a/AppstoreSearch/Cells/SearchResultTableViewCell.xib
+++ b/AppstoreSearch/Cells/SearchResultTableViewCell.xib
@@ -38,6 +38,9 @@
                         </constraints>
                         <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                         <state key="normal" title="열기"/>
+                        <connections>
+                            <action selector="openButtonTapped:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="I8Z-Ua-aVF"/>
+                        </connections>
                     </button>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="LyB-Ny-8dD">
                         <rect key="frame" x="95" y="57" width="10" height="10"/>
